fixed jumping layout on initial load

--- a/src/containers/Layout/layout.module.scss
+++ b/src/containers/Layout/layout.module.scss
@@ -4,13 +4,16 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     background-color: $background-color;
     color: $color-white;
     min-height: 100vh;
     width: 100%;
     text-align: left;
 
+    &>main {
+        width: 100%;
+    }
     &>header {
         height: 104px;
     }
