--- a/src/containers/TokenCard/token-card.module.scss
+++ b/src/containers/TokenCard/token-card.module.scss
@@ -11,6 +11,7 @@
     border: 2px solid transparent;
     border-radius: 10px;
     padding: 4px;
+    max-width: calc(25% - 24px);
     width: calc(25% - 24px);
     flex-grow: 1;
 
